# vocabulary-trainer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.js  CNAME  LICENSE  README.md  index.html  pyproject.toml  todo.md
.github/workflows/: build-and-deploy.yaml
_app/: version.json
_app/immutable/assets/: 0.I4JmS9i3.css  1.BmOvDmrF.css  3.DhDXuXdz.css
_app/immutable/chunks/: --Qi3wRr.js  --aWs8Py.js  -1UcL9AG.js  -2QonScu.js  -3vdf4iT.js  -5BZGrSu.js  -63G7_DQ.js  -8aFIh3l.js  -CW8VMRq.js  -DanI-_N.js  -ExMXMBd.js  -G8FHSWV.js  -GZlKWgh.js  -HDA8Wf6.js  -IENIrdy.js  -IZhf45I.js  -JLyy464.js  -Kv6mC0S.js  -QqNaCDh.js  -RClZ3DJ.js  -R_yXkLf.js  -UC7FAQj.js  -UdeeVDH.js  -VJuwUFS.js  -VaxTw_9.js  -WbFPdDr.js  -WyQFTyp.js  -X4DOLqo.js  -Xqvkbb8.js  -YagVRJ3.js  -ZVRbNsp.js  -ZZ_CRtY.js  -Zib1xwe.js  -ZxkbqnA.js  -cSXtnfC.js  -cYhFK8R.js  -fiBx7ZH.js  -fmd3AdK.js  -ghfdogs.js  -gs7ie6B.js  (+11019 more)
_app/immutable/entry/: app.0kZe-0Ik.js  app.BJFyI01h.js  app.lCoUWmsv.js  start.DsbwYskA.js  start.DwKKjwjM.js  start.DyJmqi_-.js
_app/immutable/nodes/: 0.CFG8E7NU.js  0.CKnWpu9l.js  0.a3eHT76l.js  1.DdG2Gf3M.js  2.5KEFCtil.js  3.B6HchpgC.js  3.CZ13OKVq.js  3.PbOeccNM.js
data_processing/: ai.py  ai_analyze.py  ai_generate.py  dictionary.py  dictionary_test.py  review_ai.py  settings.py  translate.py  utils.py
data_processing/languages/et/: words.txt
data_processing/languages/fi/: words.txt
et/: index.html
fi/: index.html
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: App.svelte  app.html  routes.js
(+12776 files in other folders)
