[tool.poetry]
name = "data-processing"
version = "0.2.0"
description = "Data processing utilities for vocabulary-trainer"
authors = []

[tool.poetry.dependencies]
python = "^3.13,<4"
pydantic = "^2.12.3"
loguru = "^0.7.3"
orjson = "^3.11.4"
requests = "^2.32.5"
pydantic-ai = {extras = ["openai"], version = "^1.6.0"}
rich = "^14.2.0"
pydantic-settings = "^2.11.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
translate = "data_processing.translate:main"
ai_analyze = "data_processing.ai_analyze:main"
ai_generate = "data_processing.ai_generate:main"
review_ai = "data_processing.review_ai:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
